# TextPlay

./: .gitignore  .pyscripts  LICENCE  README.md  function detials.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
textPlay/: Gsearch.py  Modules Used.py  __init__.py  backend.py  box.py  cli.py  colors.py  encrypt_animation.py  files.py  loader.py  logmsg.py  main.py  meta.py  morse.py  options.py  password_generator.py  progress_bar.py  requirements.txt  scraper.py
