[metadata]
name = textPlay
version = 0.1.4b1
author = Rakesh Kanna S
author_email = rakeshkanna0108@gmail.com
description = A package for many unique text tools. to make your text beautiful.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rakeshkanna-rk/textPlay
license = Apache License 2.0
keywords = text tools, cli, terminal, google search, web search, morse code, decode, encode, box, colors, options, password generator, progress bar, encryption animation
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    click>=8.1.7
    beautifulsoup4>=4.12.3
    requests>=2.31.0
    keyboard>=0.13.5

[options.entry_points]
console_scripts =
    textplay = textPlay:textPlay_cli
